Mon Mar  3 09:39:31 CET 2008 Daniel Veillard <daniel@veillard.com>

	* doc/xsltproc.xml doc/xsltproc.1: fix maxdepth default value
	  documentation fixes #519921.

Sat Feb 16 01:24:58 HKT 2008 William Brack <wbrack@mmm.com.hk>

	*libxslt/extensions.c: fixed minor error bug #516483
	*tests/exslt/common - deleted node-set.9 regression test,
	 because it relied upon an external web import.

Tue Feb  5 08:53:30 CET 2008 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: applied documentation patch from Jason Viers
	  for xsltParseStylesheetDoc

Tue Feb  5 08:36:53 CET 2008 Daniel Veillard <daniel@veillard.com>

	* python/tests/pyxsltproc.py: applied a portability patch from 
	  Stephane Bidoul

Thu Jan 24 16:24:05 CET 2008 Daniel Veillard <daniel@veillard.com>

	* doc/xslt.html doc/docbook.html: fix links for Cygwin DocBook
	  setup as suggested by Philippe Bourcier

Sun Dec 23 16:40:38 PST 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/keys.c, libxslt/pattern.c, libxslt/xsltInternals.h:
	  fixed a problem on superfluous re-generation of keys reported
	  on the mailing list by Josef Urban.

Thu Nov 29 11:43:14 CET 2007 Daniel Veillard <daniel@veillard.com>

	* configure.in: avoid a problem in configure if an old gcrypt
	  version is installed, patch from Brent Cowgill, fixes #500390

Tue Nov 13 13:08:08 PDT 2007 William Brack <wbrack@mmm.com.hk>

	* libexslt/common.c, libexslt/dynamic.c: After discussion on
	  Bugzilla with Peter Pawlowski, added same code for preventing
	  deletion of function result during garbage collection (see
	  bug #495995).
	  
Mon Nov 12 13:53:58 PDT 2007 William Brack <wbrack@mmm.com.hk>

	* libexslt/strings.c: Added code to mark the results of
	  str:tokenize and str:split as "function result" to avoid
	  garbage-collecting them during global variable initialisation.
	  Should fix bug #495995.

Wed Oct 24 17:41:08 PDT 2007 William Brack <wbrack@mmm.com.hk>

	* python/libxslt.c: changed iterator argument for Py_Dict_Next